--- a/terimakasih.html
+++ b/terimakasih.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1><p align="center">TERIMA KASIH</p></h1> 
-         <h1><p align="center"><i>TELAH MENGISI FORMULIR YANG KAMI SEDIAKAN :)</i></p> </h1>
+         <h1><p align="center"><i>TELAH MENGISI FORMULIR YANG KAMI SEDIAKAN :)</i></p></h1>
+         <p align="center"><a href="login.html"><u>Kembali ke awal</u></a></p>
     </body>
 </html>
