--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
     <label for="password">Password :</label>
     <input type="password" id="password"><br><br>
    
-    <a href="Formulir.html"><input type="submit" name=submit value="Login"></a>
+    <a href="formulir.html"><input type="submit" name=submit value="Login"></a>
 
    </body>
 </html>
