Tugas Formulir Pendaftaran

--- a/terimakasih.html
+++ b/terimakasih.html
@@ -7,6 +7,6 @@
     <body>
         <h1><p align="center">TERIMA KASIH</p></h1> 
          <h1><p align="center"><i>TELAH MENGISI FORMULIR YANG KAMI SEDIAKAN :)</i></p></h1>
-         <p align="center"><a href="login.html"><u>Kembali ke awal</u></a></p>
+         <p align="center"><a href="formulir.html"><u>Kembali ke awal</u></a></p>
     </body>
 </html>
