Tugas Formulir Pendaftaran

--- a/formulir.html
+++ b/formulir.html
@@ -145,13 +145,13 @@
 <tr>
     <td><label for="email">E-mail</label></td>
     <td>:</td>
-    <td><input type="text" id="email"/></td></td>
+    <td><input type="email" id="email"></td></td>
 </tr>
 
 <tr>
     <td><label for="nomor">No.Hp</label></td>
     <td>:</td>
-    <td><input type="text" id="nomor"/></td></td>
+    <td><input type="number" id="nomor"></td>
 </tr>
 
 <tr>
