--- a/login.html
+++ b/login.html
@@ -9,8 +9,8 @@
     <p>
     <label for="username">Username :</label>
     <input type="text" id="username"><br><br>
-    <label for="pwd">Password :</label>
-    <input type="password" id="pwd" name="pwd"><br><br>
+    <label for="password">Password :</label>
+    <input type="password" id="password"><br><br>
    
     <a href="formulir.html"><input type="submit" name=submit value="Login"></a>
 
